--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "leo-alvarenga.github.io",
+  "name": "leo-alvarenga.click",
   "private": true,
-  "version": "0.0.5",
-  "homepage": "https://leo-alvarenga.github.io",
+  "version": "0.2.0",
+  "homepage": "https://leo-alvarenga.click",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
